kubernetes/pod-with-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-pod
spec:
  containers:
  - name: config-container
    image: nginx:alpine
